--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
 
       <!-- ✅ 新增：學習成效追蹤 -->
       <br><br>
-      <button type="button" onclick="openReport()" style="background:#6f42c1; color:#fff;">📈 學習成效追蹤</button>
+      <button type="button"
+        onclick="location.href='report.html'"
+        style="background:#6f42c1; color:#fff;">
+  📈 學習成效追蹤
+</button>
+
     </div>
 
   </div><!-- mainPage end -->
