--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 
         /* 報表頁寬一點 */
         .box-wide { max-width: 900px; }
+        body{
+  font-size: 20px;     /* ⭐ 整頁放大 */
+}
+
+input, button{
+  font-size: 20px;
+  padding: 14px 18px;  /* 讓高度跟字一起變大 */
+}
+
     </style>
 </head>
 
