--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
       background: #222;
       color: white;
       padding-top: 20px;
-
-      /* ✅ 登入/新增整體字體放大 */
-      font-size: 20px;
+      font-size: 20px; /* ✅ 登入/新增整體字體放大 */
     }
 
     .box {
@@ -26,7 +24,6 @@
       background: #333;
     }
 
-    /* ✅ input、button 一起放大 */
     input, button{
       font-size: 20px;
       padding: 14px 18px;
@@ -79,7 +76,6 @@
       font-size: 0.9em;
     }
 
-    /* 登入 / 新增區塊排版 */
     #loginBox, #addBox{
       margin: 0 auto;
       max-width: 820px;
@@ -143,11 +139,13 @@
       <div id="hardwareTest" class="test-panel">
         <h4 style="margin: 0 0 10px 0;">🔧 硬體測試區</h4>
         <p>測試燈號 (點擊亮燈):</p>
-        <button class="test-btn" onclick="testLed(1)">1 (藍)</button>
-        <button class="test-btn" onclick="testLed(2)">2 (紅)</button>
+
+        <!-- ✅ 依你說的「實體順序：紅藍黃白綠」 -->
+        <button class="test-btn" onclick="testLed(1)">1 (紅)</button>
+        <button class="test-btn" onclick="testLed(2)">2 (藍)</button>
         <button class="test-btn" onclick="testLed(3)">3 (黃)</button>
-        <button class="test-btn" onclick="testLed(4)">4 (綠)</button>
-        <button class="test-btn" onclick="testLed(5)">5 (白)</button>
+        <button class="test-btn" onclick="testLed(4)">4 (白)</button>
+        <button class="test-btn" onclick="testLed(5)">5 (綠)</button>
         <button class="test-btn" onclick="testLed(0)">關燈</button>
 
         <p style="margin-top:15px; border-top:1px solid #666; padding-top:10px;">
@@ -173,7 +171,6 @@
     <div class="box" id="controlBox">
       <h3 style="margin: 0 0 10px 0;">2. 選擇關卡（遊戲開始）</h3>
 
-      <!-- ✅ 歌單：你原本的都OK（1~5） -->
       <select id="songSelect" style="padding: 12px; font-size: 20px; width: 88%; border-radius: 8px;">
         <option value="3,2,1,2,3,3,3,2,2,2,3,5,5,3,2,1,2,3,3,3,3,2,2,3,2,1">瑪莉有隻小綿羊（完整版）</option>
         <option value="1,1,5,5,4,4,5,3,3,2,2,1,5,5,3,3,2,5,5,3,3,2,1,1,5,5,4,4,5,3,3,2,2,1">小星星（完整版）</option>
@@ -439,12 +436,23 @@ const BTN_TARGET_UUID  = "3456483e-36e1-4688-b7f5-ea07361b26a8";
 let ledChar = null;
 let volChar = null;
 let targetChar = null;
-// ✅ 音名(Do~So 1~5) 對應到硬體實際鍵位(紅藍黃白綠)
-const NOTE_TO_HW = { 1:2, 2:1, 3:3, 4:5, 5:4 };
 
-function mapToHw(n){
-  return NOTE_TO_HW[n] ?? n;
-}
+/*
+你要的音名對應：
+藍 Do、紅 Re、黃 Mi、綠 Fa、白 So
+
+硬體實際排列（鍵位）：
+1=紅、2=藍、3=黃、4=白、5=綠
+
+所以：音名(1~5) -> 硬體鍵位(1~5)
+1(Do/藍)->2
+2(Re/紅)->1
+3(Mi/黃)->3
+4(Fa/綠)->5
+5(So/白)->4
+*/
+const NOTE_TO_HW = { 1:2, 2:1, 3:3, 4:5, 5:4 };
+function mapToHw(n){ return NOTE_TO_HW[n] ?? n; }
 
 let isPlaying = false;
 let song = [];
@@ -502,12 +510,8 @@ async function connectBtn() {
 
 function checkReady() {
   const btnOk = document.getElementById("btnStatus").className.includes("status-ok");
-  if (ledChar || btnOk) {
-    document.getElementById("hardwareTest").style.display = "block";
-  }
-  if (ledChar && btnOk) {
-    document.getElementById("startBtn").style.display = "inline-block";
-  }
+  if (ledChar || btnOk) document.getElementById("hardwareTest").style.display = "block";
+  if (ledChar && btnOk) document.getElementById("startBtn").style.display = "inline-block";
 }
 
 function testLed(num) {
@@ -532,11 +536,9 @@ function updateVolume(val) {
 }
 
 function startGame() {
-  // 關閉自由發聲
   document.getElementById("soundTestToggle").checked = false;
   if (targetChar) targetChar.writeValue(new TextEncoder().encode("0"));
 
-  // ✅ 讀取歌曲（保險：只留 1~5）
   song = document.getElementById("songSelect").value
     .split(",")
     .map(s => Number(String(s).trim()))
@@ -565,15 +567,10 @@ function startGame() {
 }
 
 function stopGame() {
-  if (timerInt) {
-    clearInterval(timerInt);
-    timerInt = null;
-  }
+  if (timerInt) { clearInterval(timerInt); timerInt = null; }
   isPlaying = false;
 
-  // 關聲音
   if (targetChar) targetChar.writeValue(new TextEncoder().encode("0"));
-  // 關燈
   turnOffLed();
 
   document.getElementById("gameArea").style.display = "none";
@@ -590,29 +587,19 @@ function playNote() {
     return;
   }
 
-function playNote() {
-  if (index >= song.length) {
-    if (timerInt) { clearInterval(timerInt); timerInt = null; }
-    if (targetChar) targetChar.writeValue(new TextEncoder().encode("0"));
-    setTimeout(finishGame, 250);
-    return;
-  }
-
-  // song 裡的值是音名：1=Do(藍),2=Re(紅),3=Mi(黃),4=Fa(綠),5=So(白)
+  // ✅ 音名(1~5)（你歌譜用的）
   const note = song[index];
 
-  // ✅ 轉成硬體實際鍵位：1=紅,2=藍,3=黃,4=白,5=綠
+  // ✅ 轉成硬體鍵位(1~5)（你板子實際的）
   const hwTarget = mapToHw(note);
 
-  // 畫面仍顯示音名數字(Do~So)
+  // 畫面顯示音名數字（Do~So）
   document.getElementById("currentNote").innerText = note;
-  document.getElementById("logMsg").innerText = `目標(音名): ${note} → 硬體鍵位: ${hwTarget}`;
+  document.getElementById("logMsg").innerText = `目標：${note}`;
 
   if (ledChar) ledChar.writeValue(new TextEncoder().encode(String(hwTarget)));
   if (targetChar) targetChar.writeValue(new TextEncoder().encode(String(hwTarget)));
-  else log("警告: 無法設定 Target（聲音可能不會出來）");
 }
-
 
 function onBtnPress(event) {
   const val = new TextDecoder().decode(event.target.value);
@@ -621,8 +608,11 @@ function onBtnPress(event) {
   document.getElementById("lastPressed").innerText = pressed;
   if (!isPlaying) return;
 
-  const target = song[index];
-  if (pressed === target) {
+  // ✅ 比對要用「硬體鍵位」
+  const note = song[index];          // 音名(1~5)
+  const hwTarget = mapToHw(note);    // 硬體鍵位(1~5)
+
+  if (pressed === hwTarget) {
     index++;
     setTimeout(playNote, 50);
   } else {
