--- a/index.html
+++ b/index.html
@@ -173,14 +173,22 @@
       <h3 style="margin: 0 0 10px 0;">2. 選擇關卡（遊戲開始）</h3>
 
       <select id="songSelect" style="padding: 12px; font-size: 20px; width: 88%; border-radius: 8px;">
-        <option value="3,2,1,2,3,3,3,2,2,2,3,5,5,3,2,1,2,3,3,3,3,2,2,3,2,1">瑪莉有隻小綿羊</option>
-        <option value="1,1,5,5,4,4,5,3,3,2,2,1,5,5,3,3,2,5,5,3,3,2,1,1,5,5,4,4,5,3,3,2,2,1">小星星</option>
-        <option value="3,3,4,3,5,4,3,3,4,3,1,3,3,5,4,3,2,1,4,4,3,1,2,1">生日快樂（完整版）</option>
-        <option value="1,2,3,1,1,2,3,1,3,4,5,3,4,5,5,3,5,5,3,5,1,5,1">兩隻老虎（完整版）</option>
-        <option value="5,3,3,4,2,2,1,2,3,4,5,5,5,2,2,2,2,2,3,4,3,3,3,3,4,5,5,3,3,4,2,2,1">小蜜蜂</option>
-        <option value="3,3,4,5,5,4,3,2,1,1,2,3,3,2,2,3,3,4,5,5,4,3,2,1,1,2,3,2,1,1">歡樂頌</option>
-        <option value="1,2,3,4,5,5,4,3,2,1,1,2,3,4,5,5,4,3,2,1">音階上下</option>
-        <option value="1,3,5,3,1,3,5,3,2,4,5,4,2,4,5,4,1,3,5,3">分解和弦</option>
+        <option value="3,1,2,1,3,3,3,1,1,1,3,4,4,3,1,2,1,3,3,3,3,1,1,3,1,2">瑪莉有隻小綿羊</option>
+
+<option value="2,2,4,4,5,5,4,3,3,1,1,2,4,4,3,3,1,4,4,3,3,1,2,2,4,4,5,5,4,3,3,1,1,2">小星星</option>
+
+<option value="3,3,5,3,4,5,3,3,5,3,2,3,3,4,5,3,1,2,5,5,3,2,1,2">生日快樂</option>
+
+<option value="2,1,3,2,2,1,3,2,3,5,4,3,5,4,4,3,4,4,3,4,2,4,2">兩隻老虎</option>
+
+<option value="4,3,3,5,1,1,2,1,3,5,4,4,4,1,1,1,1,1,3,5,3,3,3,3,5,4,4,3,3,5,1,1,2">小蜜蜂</option>
+
+<option value="3,3,5,4,4,5,3,1,2,2,1,3,3,1,1,3,3,5,4,4,5,3,1,2,2,1,3,1,2,2">歡樂頌</option>
+
+<option value="2,1,3,5,4,4,5,3,1,2,2,1,3,5,4,4,5,3,1,2">音階上下</option>
+
+<option value="2,3,4,3,2,3,4,3,1,5,4,5,1,5,4,5,2,3,4,3">分解和弦</option>
+
       </select>
 
       <br><br>
