--- a/index.html
+++ b/index.html
@@ -90,18 +90,19 @@
     <div style="margin-bottom:10px;">🎵 選擇歌曲</div>
     <select id="songSelect" style="width:92%;max-width:680px;">
       <!-- 注意：歌譜用「音名數字」：1=Do、2=Re、3=Mi、4=Fa、5=So -->
-      <option value="1,1,2,2,3,3,2,1,1,2,2,3,3,2">小星星(長)</option>
+      <option value="1,1,2,2,3,3,2,1,1,2,2,3,3,2">小星星</option>
       <option value="3,1,2,1,3,3,3,1,1,1,3,4,4,3,1,2,1,3,3,3,3,1,1,3,1,2">瑪莉有隻小綿羊</option>
       <option value="2,3,2,3,4,3,2,1,2,3,4,3,2,2,3,2,3,4,3,2,1,2,3,4,3,2,3,4,5,4,3,2">拔蘿蔔</option>
       <option value="2,2,3,4,4,3,2,1,2,3,4,3,2,2,2,3,4,4,3,2,1,2,3,4,3,2,3,4,5,4,3,2,1">小兔子</option>
       <option value="2,3,4,4,5,4,3,2,2,3,4,3,2,2,3,4,4,5,4,3,2,2,3,4,3,2,3,4,5,4,3,2">划呀划小船</option>
 
       <!-- ✅ 你要我加「沒有的 5 首歌」(都只用 1~5) -->
-      <option value="1,2,3,1,1,2,3,1,3,4,5,3,4,5,5,3,5,5,3,5,1,5,1,1,2,3,1,1,2,3,1">兩隻老虎</option>
-      <option value="3,3,4,5,5,4,3,2,1,1,2,3,3,2,2,3,3,4,5,5,4,3,2,1,1,2,3,2,1,1">歡樂頌</option>
-      <option value="5,3,3,4,2,2,1,2,3,4,5,5,5,2,2,2,2,2,3,4,3,3,3,3,4,5,5,3,3,4,2,2,1">小蜜蜂</option>
-      <option value="1,2,3,4,5,5,4,3,2,1,1,2,3,4,5,5,4,3,2,1,1,2,3,2,1,1">音階上下</option>
-      <option value="1,3,5,3,1,3,5,3,2,4,5,4,2,4,5,4,1,3,5,3,2,4,5,4,2,4,5,4">分解和弦</option>
+      <option value="2,1,3,2,2,1,3,2,3,5,4,3,5,4,4,3,4,4,3,4,2,4,2,2,1,3,2,2,1,3,2">兩隻老虎</option>
+<option value="3,3,5,4,4,5,3,1,2,2,1,3,3,1,1,3,3,5,4,4,5,3,1,2,2,1,3,1,2,2">歡樂頌</option>
+<option value="4,3,3,5,1,1,2,1,3,5,4,4,4,1,1,1,1,1,3,5,3,3,3,3,5,4,4,3,3,5,1,1,2">小蜜蜂</option>
+<option value="2,1,3,5,4,4,5,3,1,2,2,1,3,5,4,4,5,3,1,2,2,1,3,1,2,2">音階上下</option>
+<option value="2,3,4,3,2,3,4,3,1,5,4,5,1,5,4,5,2,3,4,3,1,5,4,5,1,5,4,5">分解和弦</option>
+
     </select>
     <br><br>
     <button id="startBtn" class="btn-start">開始遊戲</button>
