--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>鋼琴遊戲（最終版：實體順序統一）</title>
+<title>鋼琴遊戲</title>
 
 <style>
   body{
